Fix comment area being cutoff due to overflow (#861)
I had inadvertently introduced a layout bug where the author section buttons, 
when selected, are cutoff thanks to a greedy overflow rule I added. 
This was originally added to contain overflowing `pre` and `code` blocks 
back in #823.

We can apply a minimum width here instead, while preserving the desired 
behavior from before _without_ cutting off elements on selection!

--- a/assets/css/components/_comments.scss
+++ b/assets/css/components/_comments.scss
@@ -15,7 +15,7 @@
 }
 
 .comment-container {
-  overflow-x: auto;
+  min-width: 0;
 }
 
 .comment-body {
